# gerador-ebook-crewai-new

./: .gitignore  README.md  constraints.txt  convert_to_pdf.py  pyproject.toml  pytest.ini  requirements.txt  run.py  sumario.md
backup/: python_backup.json
backup/write_a_book_with_flows/: config.py  main.py  types.py
backup/write_a_book_with_flows/crews/outline_book_crew/: outline_crew.py
backup/write_a_book_with_flows/crews/write_book_chapter_crew/: write_book_chapter_crew.py
config/: agents.yaml
config/outline_crew/: tasks.yaml
config/review_crew/: tasks.yaml
config/write_crew/: tasks.yaml
examples/: generate_ebook.py
src/: config.py
src/agents/: __init__.py  write_agents.py
src/core/config/: llm_config.py  settings.py
src/core/export/: book_exporter.py
src/core/parsers/: markdown_parser.py
src/crews/outline_crew/: outline_crew.py
src/crews/review_crew/: review_crew.py
src/crews/write_crew/: write_crew.py
src/factories/: book_factory.py
src/flows/: book_flow.py
src/interfaces/: book_services.py
src/models/: book_models.py
src/services/: book_services.py
tests/: conftest.py
tests/e2e/: conftest.py  test_book_generation.py  test_limits.py  test_recovery.py
tests/integration/: test_book_generation.py  test_openai_integration.py
tests/unit/: conftest.py
tests/unit/core/: test_export.py  test_markdown_parser.py  test_settings.py
tests/unit/crews/: test_outline_crew.py  test_review_crew.py  test_write_crew.py
tests/unit/models/: test_book_models.py
(+2 files in other folders)
