[tool.poetry]
name = "write_a_book_with_flows"
version = "0.1.0"
description = "write_a_book_with_flows using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
asyncio = ">=3.4.3"
crewai = {extras = ["tools"], version = ">=0.76.9,<1.0.0"}

[tool.poetry.scripts]
kickoff = "write_a_book_with_flows.main:kickoff"
plot = "write_a_book_with_flows.main:plot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"